--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1512,8 +1512,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Δοκιμάστε διαφορετικά στιλ, ταπετσαρίες και άλλα"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Προφύλαξη οθόνης"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"προφύλαξη οθόνης"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Μη διαθέσιμο, ενεργή λειτουργία ώρας ύπνου."</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Χρήση προφύλαξης οθόνης"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Στη φόρτιση ή στη βάση"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Στη φόρτιση"</string>
@@ -1915,6 +1914,8 @@
     <string name="bluetooth_untether_blank" msgid="5087548945727762308">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> θα αποσυνδεθεί."</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Σύνδεση Ethernet"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Κοινή χρήση της σύνδεσης του τηλεφώνου στο διαδίκτυο μέσω Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Χρησιμοποιήστε το σημείο πρόσβασης Wi-Fi και τη σύνδεση για να παρέχετε σύνδεση στο διαδίκτυο σε άλλες συσκευές, μέσω της σύνδεσης δεδομένων κινητής τηλεφωνίας που χρησιμοποιείτε. Οι εφαρμογές μπορούν επίσης να δημιουργούν ένα σημείο πρόσβασης Wi-Fi, για να μοιράζονται περιεχόμενο με κοντινές συσκευές."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Χρησιμοποιήστε το σημείο πρόσβασης Wi-Fi και τη σύνδεση, για να παρέχετε σύνδεση στο διαδίκτυο σε άλλες συσκευές, μέσω του δικτύου Wi-Fi ή της σύνδεσης δεδομένων κινητής τηλεφωνίας που χρησιμοποιείτε. Οι εφαρμογές μπορούν επίσης να δημιουργούν ένα σημείο πρόσβασης Wi-Fi, για να μοιράζονται περιεχόμενο με κοντινές συσκευές."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Βοήθεια"</string>
@@ -4196,6 +4197,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της εφαρμογής σε αυτήν τη συσκευή"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της κατηγορίας σε αυτήν τη συσκευή"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Μετά από αίτημά σας, το Android αποκλείει την εμφάνιση ειδοποιήσεων αυτής της ομάδας σε αυτήν τη συσκευή"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Κατηγορίες"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Άλλα"</string>
     <plurals name="notification_group_summary" formatted="false" msgid="483490958130993160">
@@ -5072,7 +5075,7 @@
     <string name="one_handed_action_show_notification_title" msgid="8789305491485437130">"Εμφάνιση ειδοποιήσεων"</string>
     <string name="one_handed_action_show_notification_summary" msgid="8281689861222000436">"Οι ειδοποιήσεις και οι ρυθμίσεις θα εμφανίζονται."</string>
     <string name="ambient_display_summary" msgid="2650326740502690434">"Για να ελέγξετε την ώρα, τις ειδοποιήσεις και άλλες πληροφορίες, πατήστε δύο φορές στην οθόνη."</string>
-    <string name="ambient_display_pickup_title" product="default" msgid="4418310591912877548">"Σηκώστε το για να δείτε"</string>
+    <string name="ambient_display_pickup_title" product="default" msgid="4418310591912877548">"Σηκώστε για έλεγχο του τηλεφώνου"</string>
     <string name="ambient_display_pickup_title" product="tablet" msgid="8055486872070888377">"Σηκώστε το tablet για να το ελέγξετε"</string>
     <string name="ambient_display_pickup_title" product="device" msgid="8980156994848721455">"Σηκώστε τη συσκευή για να την ελέγξετε"</string>
     <string name="ambient_display_wake_screen_title" msgid="7637678749035378085">"Οθόνη ξυπνήματος"</string>
