--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -1532,8 +1532,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Izmēģiniet dažādus stilus, fona tapetes utt."</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Ekrānsaudzētājs"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"ekrānsaudzētājs"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Nav pieejams, jo ir ieslēgts naktsmiera režīms"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Izmantot ekrānsaudzētāju"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Uzlādes vai dokošanas laikā"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Uzlādes laikā"</string>
@@ -1936,6 +1935,8 @@
     <string name="bluetooth_untether_blank" msgid="5087548945727762308">"Ierīce <xliff:g id="DEVICE_NAME">%1$s</xliff:g> tiks atsaistīta."</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet piesaiste"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Koplietojiet tālruņa interneta savienojumu, izmantojot tīklu Ethernet."</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Izmantojiet tīklāju un piesaisti, lai varētu lietot internetu citās ierīcēs, izveidojot mobilo datu savienojumu. Lietotnes var arī izveidot tīklāju satura kopīgošanai ar tuvumā esošajām ierīcēm."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Izmantojot tīklāju un piesaisti, jūsu ierīces Wi-Fi vai mobilo datu savienojums var nodrošināt interneta savienojumu citām ierīcēm. Lietotnes var arī izveidot tīklāju satura kopīgošanai ar tuvumā esošajām ierīcēm."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Palīdzība"</string>
@@ -4244,6 +4245,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Pēc jūsu pieprasījuma Android neatļauj šīs lietotnes paziņojumu rādīšanu šajā ierīcē."</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Pēc jūsu pieprasījuma Android neatļauj šīs kategorijas paziņojumu rādīšanu šajā ierīcē."</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Pēc jūsu pieprasījuma Android neatļauj šīs grupas paziņojumu rādīšanu šajā ierīcē."</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Kategorijas"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Cits"</string>
     <plurals name="notification_group_summary" formatted="false" msgid="483490958130993160">
