--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -1512,8 +1512,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"مختلف اسٹائل، وال پیپرز، اور مزید بہت کچھ آزمائیں"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"اسکرین سیور"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"اسکرین سیور"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"دستیاب نہیں ہے کیونکہ بیڈ ٹائم موڈ آن ہے"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"اسکرین سیور کا استعمال کریں"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"ڈاک سے منسلک یا چارج ہونے کے دوران"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"چارج ہوتے وقت"</string>
@@ -1915,6 +1914,8 @@
     <string name="bluetooth_untether_blank" msgid="5087548945727762308">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> کا ربط ختم کر دیا جائے گا۔"</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"ایتھرنیٹ ٹیدرنگ"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"‏Ethernet ایتھرنیٹ کے ذریعے فون کے انٹرنیٹ کنیکشن کا اشتراک کریں"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"اپنے موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کیلئے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کیلئے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"‏اپنے Wi‑Fi یا موبائل ڈیٹا کنکشن کے ذریعے دیگر آلات کو انٹرنیٹ فراہم کرنے کے لیے ہاٹ اسپاٹ اور ٹیدرنگ کا استعمال کریں۔ ایپس بھی قریبی آلات کے ساتھ مواد کا اشتراک کرنے کے لیے ایک ہاٹ اسپاٹ تخلیق کر سکتی ہیں۔"</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"مدد"</string>
@@ -3523,7 +3524,7 @@
     <string name="user_copy_apps_menu_title" msgid="5354300105759670300">"دستیاب ایپس انسٹال کریں"</string>
     <string name="nfc_payment_settings_title" msgid="2043139180030485500">"کنٹیکٹ لیس ادائیگیاں"</string>
     <string name="nfc_default_payment_settings_title" msgid="2150504446774382261">"ڈیفالٹ ادائیگی ایپ"</string>
-    <string name="nfc_default_payment_footer" msgid="978535088340021360">"ادائیگیوں کی ایپ کا استعمال کرتے ہوئے ادائیگی کرنے کے لیے، اپنے آلے کے پچھلے حصے کو ادائیگی ٹرمنل پر رکھیں"</string>
+    <string name="nfc_default_payment_footer" msgid="978535088340021360">"ادائیگیوں کی ایپ استعمال کرتے ہوئے ادائیگی کرنے کیلئے اپنے آلے کے پچھلے حصے کو پیمنٹ ٹرمنل پر رکھیں"</string>
     <string name="nfc_more_details" msgid="1700713533074275233">"مزید جانیں"</string>
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"ڈیفالٹ ادائیگی ایپ کے طور پر ورک ایپ کو سیٹ کریں؟"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"ورک ایپ کا استعمال کرتے ہوئے ادائیگی کرنے کے لیے:"</string>
@@ -4196,6 +4197,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"‏آپ کی درخواست پر، Android اس ایپ کی اطلاعات کو اس آلہ پر ظاہر ہونے سے مسدود کررہا ہے"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"‏آپ کی درخواست پر، Android اطلاعات کے اس زمرے کو اس آلہ پر ظاہر ہونے سے مسدود کررہا ہے"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"‏آپ کی درخواست پر، Android اطلاعات کے اس گروپ کو اس آلہ پر ظاہر ہونے سے مسدود کر رہا ہے"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"زمرے"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"دیگر"</string>
     <plurals name="notification_group_summary" formatted="false" msgid="483490958130993160">
