--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -1512,8 +1512,7 @@
     <string name="style_suggestion_summary" msgid="4271131877800968159">"Prófaðu mismunandi stíla, veggfóður og fleira"</string>
     <string name="screensaver_settings_title" msgid="3588535639672365395">"Skjávari"</string>
     <string name="keywords_screensaver" msgid="7249337959432229172">"skjávari"</string>
-    <!-- no translation found for screensaver_settings_when_to_dream_bedtime (3279310576803094771) -->
-    <skip />
+    <string name="screensaver_settings_when_to_dream_bedtime" msgid="3279310576803094771">"Ekki í boði þar sem kveikt er á svefntímastillingu"</string>
     <string name="screensaver_settings_toggle_title" msgid="6194634226897244374">"Nota skjávara"</string>
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"Við hleðslu eða í dokku"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"Við hleðslu"</string>
@@ -1915,6 +1914,8 @@
     <string name="bluetooth_untether_blank" msgid="5087548945727762308">"Tjóðrun <xliff:g id="DEVICE_NAME">%1$s</xliff:g> verður slitið."</string>
     <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"Ethernet-tjóðrun"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"Deila nettengingu símans gegnum Ethernet"</string>
+    <!-- no translation found for ethernet_tethering_subtext (8796744370636115313) -->
+    <skip />
     <string name="tethering_footer_info" msgid="6782375845587483281">"Notaðu heitan reit og tjóðrun til að tengja önnur tæki við internetið í gegnum farsímagagnatenginguna þína. Forrit geta einnig búið til heitan reit til að deila efni með nálægum tækjum."</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"Notaðu heitan reit og tjóðrun til að tengja önnur tæki við internetið í gegnum Wi-Fi eða farsímagagnatenginguna þína. Forrit geta einnig búið til heitan reit til að deila efni með nálægum tækjum."</string>
     <string name="tethering_help_button_text" msgid="2823655011510912001">"Hjálp"</string>
@@ -4196,6 +4197,8 @@
     <string name="app_notifications_off_desc" msgid="6691342160980435901">"Android kemur í veg fyrir að tilkynningar þessa forrits birtist í þessu tæki, samkvæmt beiðni frá þér"</string>
     <string name="channel_notifications_off_desc" msgid="6202042207121633488">"Android kemur í veg fyrir að þessi tilkynningaflokkur birtist í þessu tæki, samkvæmt beiðni frá þér"</string>
     <string name="channel_group_notifications_off_desc" msgid="9096417708500595424">"Android kemur í veg fyrir að þessi tilkynningahópur birtist í þessu tæki, samkvæmt beiðni frá þér"</string>
+    <!-- no translation found for app_notifications_not_send_desc (5683060986735070528) -->
+    <skip />
     <string name="notification_channels" msgid="1502969522886493799">"Flokkar"</string>
     <string name="notification_channels_other" msgid="18159805343647908">"Annað"</string>
     <plurals name="notification_group_summary" formatted="false" msgid="483490958130993160">
